--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ channels:
 - defaults
 dependencies:
 - jupyter
-- pytorch==1.3.0
-- torchvision==0.4.1
+- pytorch>=1.3.0
+- torchvision>=0.5
 - matplotlib
 - pandas
 - requests
